# playing_with_agi

./: .gitignore  Errors.md  README.md  app.py  app_v0.py  app_v1.py  diet_plans.index  main.py  pyproject.toml  requirements.txt
Notebooks/: gettting_started.ipynb
database/: user_database.py
faiss_storage/: faiss_helper.py
utils/: __init__.py  arguments.py  audio.py  detection.py  diet_plan.py  visualization.py
