[tool.poetry]
name = "agi"
version = "0.1.0"
description = "Experiments with langchain"
authors = ["Anmol Gupta <agupta@cs.iitr.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.132"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
